# hydraria

./: Cargo.toml  README.md  README.zh-CN.md
docs/: MANUAL.md
src/: assets.rs  cache.rs  engine.rs  error.rs  fs_pick.rs  lib.rs  main.rs  models.rs  ratelimit.rs  routes.rs
src/plugins/: chacha20.rs  mod.rs
web/: index.html
