[package]
name = "hydraria"
version = "0.1.1"
edition = "2024"
description = "High-performance multi-threaded HTTP streaming proxy with web dashboard"
license = "Apache-2.0"
repository = "https://github.com/qy527145/hydraria"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8.5", features = ["mime-guess"] }
mime_guess = "2.0"
uuid = { version = "1.10", features = ["v4"] }
bytes = "1.7"
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
async-stream = "0.3"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
